# saying

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: saying_wip.ipynb
saying/: __init__.py  base.py  prep.py  resources.py  util.py
