[metadata]
name = saying
version = 0.0.2
url = https://github.com/thorwhalen/saying
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = AI-enabled quotes search
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = saying

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

